--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.picasso3:picasso:3.0.0-alpha01'
+    implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
+    //implementation 'com.tencent.wcdb:room:1.1-19'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
 
     def dagger_version="2.41"
     implementation "com.google.dagger:dagger:$dagger_version"
